<resources>
    <string name="app_name">GitHubClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_search">Search</string>
    <string name="nav_issues">Issues</string>
    <string name="nav_my_repos">My repos</string>
    <string name="nav_starred_repos">Starred repos</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="view">View</string>
    <string name="members">Members</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="gists">Gists</string>
    <string name="organizations">Organizations</string>
    <string name="company">Company:</string>
    <string name="email">Email:</string>
    <string name="edit">Edit</string>
    <string name="editName">Name:</string>
    <string name="editEmail">Email:</string>
    <string name="editCompany">Company:</string>
    <string name="edit_form_action_save">Save</string>
    <string name="state">State:</string>
    <string name="msg_users_not_found">Users not found</string>
    <string name="username_invalid">Invalid username!</string>
    <string name="password_invalid">Invalid password!</string>
    <string name="profile_created_at">Created at </string>
    <string name="profile_last_update">Updated at </string>
    <string name="back">Back</string>
    <string name="owner">Owner:</string>
    <string name="forks">Forks:</string>
    <string name="watchers">Watchers:</string>
    <string name="language">Language:</string>
    <string name="stars">Stars:</string>
    <string name="description">Description:</string>



</resources>
