<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/repo_info_progress_bar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible"
        tools:visibility="gone" />

    <RelativeLayout
        android:id="@+id/repo_info_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/repo_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/repo_info_header_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/repo_info_image"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:padding="3dp"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/repo_info_image"
                    android:layout_marginTop="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/repo_info_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/repo_info_owner"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:textSize="18sp"
                        android:text="@string/owner"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/repo_info_created_at"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:text="@string/profile_created_at"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/repo_info_last_update"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:text="@string/profile_last_update"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/repo_info_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/pr_followers_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forks"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/repo_info_forks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:text=""
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repo_info_watch_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watchers"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/repo_info_watch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:text=""
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repo_info_stars_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stars"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/repo_info_stars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:text=""
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repo_info_lang_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/repo_info_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repo_info_descr_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/repo_info_descr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_normal"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>